--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 <p>Some projects I am currently working on</p>
 
 <ul>
-<li>Play Metrics - A Play! Framework 2.0 plugin for gathering metrics using the wonderful Metrics library (created by <a href="https://github.com/CodaHale" class="user-mention">@CodaHale</a>)</li>
-<li>Play Constretto - A Play! Framework 2.1 plugin for enabling the Constretto configuration tool to be used in conjunction with the standard Play configuration mechanism</li>
+<li><a href="//github.com/zapodot/play-metrics">Play Metrics</a> - A <a href="http://www.playframework.org">Play! Framework 2.1</a> plugin for gathering metrics using the wonderful Metrics library (created by <a href="https://github.com/CodaHale" class="user-mention">@CodaHale</a>)</li>
+<li><a href="//github.com/zapodot/play-constretto">Play Constretto</a> - A <a href="http://www.playframework.org">Play! Framework 2.1</a> plugin for enabling the Constretto configuration tool to be used in conjunction with the standard Play configuration mechanism</li>
+<li>I am also a co maintainer for the <a href="//github.com/constretto/constretto-core">Constretto project</a></li>
+  
 </ul>
       </section>
     </div>
