--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
       <section id="main_content" class="inner">
         <h3>Zapodot's projects</h3>
 
-<p>Some projects I am currently working on</p>
+<p>Some projects I am currently working on:</p>
 
 <ul>
 <li><a href="//github.com/zapodot/play-metrics">Play Metrics</a> - A <a href="http://www.playframework.org">Play! Framework 2.1</a> plugin for gathering metrics using the wonderful Metrics library (created by <a href="https://github.com/CodaHale" class="user-mention">@CodaHale</a>)</li>
-<li><a href="//github.com/zapodot/play-constretto">Play Constretto</a> - A <a href="http://www.playframework.org">Play! Framework 2.1</a> plugin for enabling the Constretto configuration tool to be used in conjunction with the standard Play configuration mechanism</li>
+<li><a href="//github.com/zapodot/constretto-play">Play Constretto</a> - A <a href="http://www.playframework.org">Play! Framework 2.1</a> plugin for enabling the Constretto configuration tool to be used in conjunction with the standard Play configuration mechanism</li>
 <li>I am also a co maintainer for the <a href="//github.com/constretto/constretto-core">Constretto project</a></li>
   
 </ul>
+<p>The projects above I work with on my spare time for fun, I also do a lot of software development at my day job which is being a consultant and a partner at <a href="http://www.sonat.no">Sonat Consulting AS</a></p>
       </section>
     </div>
 
