--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <li>I am also a co maintainer for the <a href="//github.com/constretto/constretto-core">Constretto project</a></li>
   
 </ul>
-<p>The projects above I work with on my spare time for fun, I also do a lot of software development at my day job which is being a consultant and a partner at <a href="http://www.sonat.no">Sonat Consulting AS</a></p>
+<p>The projects above I work with on my spare time just for fun. I also do a lot of software development at my day job which is being a consultant and a partner at <a href="http://www.sonat.no">Sonat Consulting AS</a></p>
       </section>
     </div>
 
