--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/zapodot">View on GitHub</a>
 
           <h1 id="project_title">Zapodot's projects</h1>
-          <h2 id="project_tagline">Pages for zapodot</h2>
+          <h2 id="project_tagline">Man@Work</h2>
 
         </header>
     </div>
