--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
 <ul>
 <li><a href="//github.com/zapodot/jackson-databind-java-optional">Jackson Databind Java Optional</a> - Support for Java Optional with Jackson's Databinding module</li>
-<li><a href="//github.com/zapodot/akka-test-junit">Akka JUnit Rules</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rules</a> for simplifing testing of Akka actors</li>
 <li><a href="//github.com/zapodot/embedded-db-junit">Embedded DB Junit rule</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rule</a> for running an in-memory <a href="http://www.h2database.com">H2 database</a> in your tests</li>
+<li><a href="//github.com/zapodot/embedded-ldap-junit">Embedded LDAP Junit rule</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rule</a> for running an in-memory <a href="https://www.ldap.com/unboundid-ldap-sdk-for-java">UnboundID LDAP Server</a> in your tests</li>
+<li><a href="//github.com/zapodot/akka-test-junit">Akka JUnit Rules</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rules</a> for simplifing testing of Akka actors</li>
 <li><a href="//github.com/zapodot/play-metrics">Play Metrics</a> - A <a href="http://www.playframework.org">Play! Framework 2.1</a> plugin for gathering metrics using the wonderful Metrics library (created by <a href="https://github.com/CodaHale" class="user-mention">@CodaHale</a>)</li>
 <li><a href="//github.com/zapodot/constretto-play">Play Constretto</a> - A <a href="http://www.playframework.org">Play! Framework 2.1</a> plugin for enabling the Constretto configuration tool to be used in conjunction with the standard Play configuration mechanism</li>
 <li>I am also a co maintainer for the <a href="//github.com/constretto/constretto-core">Constretto project</a></li>
