--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
   ga('send', 'pageview');
 
 </script>
-    
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5522b8b6762ce0a0" async="async"></script>    
 
   </body>
 </html>
