--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
 <li><a href="//github.com/zapodot/embedded-ldap-junit">Embedded LDAP Junit rule</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rule</a> for running an in-memory <a href="https://www.ldap.com/unboundid-ldap-sdk-for-java">UnboundID LDAP Server</a> in your tests</li>
 <li><a href="//github.com/zapodot/hystrix-dropwizard-bundle">Hystrix DropwWizard bundle</a> - a <a href="//dropwizard.io">DropWizard</a> bundle that enables reporting for <a href="//github.com/Netflix/Hystrix">Hystrix</a></li>
 <li><a href="//github.com/zapodot/akka-test-junit">Akka JUnit Rules</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rules</a> for simplifing testing of Akka actors</li>
-<li><a href="//github.com/zapodot/play-metrics">Play Metrics</a> - A <a href="http://www.playframework.org">Play! Framework 2.1</a> plugin for gathering metrics using the wonderful Metrics library (created by <a href="https://github.com/CodaHale" class="user-mention">@CodaHale</a>)</li>
-<li><a href="//github.com/zapodot/constretto-play">Play Constretto</a> - A <a href="http://www.playframework.org">Play! Framework 2.1</a> plugin for enabling the Constretto configuration tool to be used in conjunction with the standard Play configuration mechanism</li>
 <li>I am also a co maintainer for the <a href="//github.com/constretto/constretto-core">Constretto project</a></li>
   
 </ul>
+<p>Here are a few projects that I have previously worked on, but have since abandoned (left here for educational purposes):</p>
+<ul>
+<li><a href="//github.com/zapodot/play-metrics">Play Metrics</a> - A <a href="http://www.playframework.org">Play! Framework 2.1</a> plugin for gathering metrics using the wonderful Metrics library (created by <a href="https://github.com/CodaHale" class="user-mention">@CodaHale</a>)</li>
+<li><a href="//github.com/zapodot/constretto-play">Play Constretto</a> - A <a href="http://www.playframework.org">Play! Framework 2.1</a> plugin for enabling the Constretto configuration tool to be used in conjunction with the standard Play configuration mechanism</li>
+</ul>
+
 <p>The projects above I work with on my spare time just for fun. I also do a lot of software development at my day job which is being a consultant and a partner at <a href="http://www.sonat.no">Sonat Consulting AS</a></p>
       </section>
     </div>
