--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
 <ul>
 <li><a href="//github.com/zapodot/jackson-databind-java-optional">Jackson Databind Java Optional</a> - Support for Java Optional with Jackson's Databinding module</li>
-<li><a href="//github.com/zapodot/embedded-db-junit">Embedded DB Junit rule</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rule</a> for running an in-memory <a href="http://www.h2database.com">H2 database</a> in your tests</li>
+<li><a href="http://embedded-db-junit.zapodot.org/">Embedded DB Junit rule</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rule</a> for running an in-memory <a href="http://www.h2database.com">H2 database</a> in your tests</li>
 <li><a href="//github.com/zapodot/embedded-ldap-junit">Embedded LDAP Junit rule</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rule</a> for running an in-memory <a href="https://www.ldap.com/unboundid-ldap-sdk-for-java">UnboundID LDAP Server</a> in your tests</li>
 <li><a href="//github.com/zapodot/hystrix-dropwizard-bundle">Hystrix DropwWizard bundle</a> - a <a href="//dropwizard.io">DropWizard</a> bundle that enables reporting for <a href="//github.com/Netflix/Hystrix">Hystrix</a></li>
 <li><a href="//github.com/zapodot/akka-test-junit">Akka JUnit Rules</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rules</a> for simplifing testing of Akka actors</li>
 <li>I am also a co maintainer for the <a href="//github.com/constretto/constretto-core">Constretto project</a></li>
-  
+
 </ul>
 <p>Here are a few projects that I have previously worked on, but have since abandoned (left here for educational purposes):</p>
 <ul>
@@ -67,7 +67,7 @@
 
 </script>
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5522b8b6762ce0a0" async="async"></script>    
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5522b8b6762ce0a0" async="async"></script>
 
   </body>
 </html>
