--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 </ul>
 
 <p>The projects above I work with on my spare time just for fun. I also do a lot of software development at my day job which is being a consultant and a partner at <a href="http://www.sonat.no">Sonat Consulting AS</a></p>
+LinkedIn:
+        <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+        <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/sondre" data-format="hover" data-related="false" data-text="Sondre Eikanger Kvalø"></script>        
       </section>
     </div>
 
