--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 <p>The projects above I work with on my spare time just for fun. I also do a lot of software development at my day job which is being a consultant and a partner at <a href="http://www.sonat.no">Sonat Consulting AS</a></p>
 LinkedIn:
         <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-        <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/sondre" data-format="click" data-related="false" data-text="Sondre Eikanger Kvalø"></script>        
+        <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/sondre" data-format="click" data-related="false" data-text="Sondre Eikanger Kvalø"></script>
+        
+        <a href="https://twitter.com/zapodot?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @zapodot</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </section>
     </div>
 
