--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
 
 <p>The projects above I work with on my spare time just for fun. I also do a lot of software development at my day job which is being a consultant and a partner at <a href="http://www.sonat.no">Sonat Consulting AS</a></p>
 
-  <p>
-        <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-        <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/sondre" data-format="click" data-related="false" data-text="Sondre Eikanger Kvalø"></script>
+        <p>
+         <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="sondre"><a class="LI-simple-link" href='https://no.linkedin.com/in/sondre?trk=profile-badge'>Sondre Eikanger Kvalø</a></div>
         </p>
         <p>
         <a href="https://twitter.com/zapodot?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @zapodot</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
