--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <p>The projects above I work with on my spare time just for fun. I also do a lot of software development at my day job which is being a consultant and a partner at <a href="http://www.sonat.no">Sonat Consulting AS</a></p>
 
         <p>
+          <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
          <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="sondre"><a class="LI-simple-link" href='https://no.linkedin.com/in/sondre?trk=profile-badge'>Sondre Eikanger Kvalø</a></div>
         </p>
         <p>
