--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 
   <head>
     <meta charset='utf-8' />
@@ -28,41 +28,38 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>Zapodot's projects</h3>
+        <div><a href="//github.com/zapodot" target="_blank"><img src="images/snake.svg" alt="Animation showing @zapodot commit history"/></a></div>
 
 <p>Some projects I am currently working on:</p>
 
 <ul>
-<li><a href="//github.com/zapodot/embedded-jms-junit">Embedded JMS Junit rule</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rule</a> for running an in-memory <a href="http://activemq.apache.org">ActiveMQ JMS broker</a> in your tests</li>
-<li><a href="http://embedded-db-junit.zapodot.org/">Embedded DB Junit rule</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rule</a> for running an in-memory <a href="http://www.h2database.com">H2 database</a> in your tests</li>
-<li><a href="//github.com/zapodot/embedded-ldap-junit">Embedded LDAP Junit rule</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rule</a> for running an in-memory <a href="https://www.ldap.com/unboundid-ldap-sdk-for-java">UnboundID LDAP Server</a> in your tests</li>
-<li><a href="//github.com/zapodot/hystrix-dropwizard-bundle">Hystrix DropwWizard bundle</a> - a <a href="//dropwizard.io">DropWizard</a> bundle that enables reporting for <a href="//github.com/Netflix/Hystrix">Hystrix</a></li>
-<li><a href="//github.com/zapodot/jackson-databind-java-optional">Jackson Databind Java Optional</a> - Support for Java Optional with Jackson's Databinding module</li>
-<li><a href="//github.com/zapodot/akka-test-junit">Akka JUnit Rules</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rules</a> for simplifing testing of Akka actors</li>
-<li>I am also a co maintainer for the <a href="//github.com/constretto/constretto-core">Constretto project</a></li>
-
+    <li><a href="https://embedded-db-junit.zapodot.org/">Embedded DB Junit rule</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rule</a> for running an in-memory <a href="http://www.h2database.com">H2 database</a> in your tests</li>
+    <li><a href="//github.com/zapodot/embedded-ldap-junit">Embedded LDAP Junit rule</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rule</a> for running an in-memory <a href="https://www.ldap.com/unboundid-ldap-sdk-for-java">UnboundID LDAP Server</a> in your tests</li>
+    <li>I am also a co-maintainer for the <a href="//github.com/constretto/constretto-core">Constretto project</a></li>
 </ul>
-<p>Here are a few projects that I have previously worked on, but have since abandoned (left here for educational purposes):</p>
+
+<p>Here are a few projects that I have previously worked on but have since abandoned (left here for educational purposes):</p>
 <ul>
-<li><a href="//github.com/zapodot/play-metrics">Play Metrics</a> - A <a href="http://www.playframework.org">Play! Framework 2.1</a> plugin for gathering metrics using the wonderful Metrics library (created by <a href="https://github.com/CodaHale" class="user-mention">@CodaHale</a>)</li>
-<li><a href="//github.com/zapodot/constretto-play">Play Constretto</a> - A <a href="http://www.playframework.org">Play! Framework 2.1</a> plugin for enabling the Constretto configuration tool to be used in conjunction with the standard Play configuration mechanism</li>
+    <li><a href="//github.com/zapodot/hystrix-dropwizard-bundle">Hystrix DropwWizard bundle</a> - a <a href="//dropwizard.io">DropWizard</a> bundle that enables reporting for <a href="//github.com/Netflix/Hystrix">Hystrix</a></li>
+    <li><a href="//github.com/zapodot/jackson-databind-java-optional">Jackson Databind Java Optional</a> - Support for Java Optional with Jackson's Databinding module</li>
+    <li><a href="//github.com/zapodot/akka-test-junit">Akka JUnit Rules</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rules</a> for simplifing testing of Akka actors</li>
+    <li><a href="//github.com/zapodot/embedded-jms-junit">Embedded JMS Junit rule</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rule</a> for running an in-memory <a href="http://activemq.apache.org">ActiveMQ JMS broker</a> in your tests</li>
+    <li><a href="//github.com/zapodot/play-metrics">Play Metrics</a> - A <a href="http://www.playframework.org">Play! Framework 2.1</a> plugin for gathering metrics using the wonderful Metrics library (created by <a href="https://github.com/CodaHale" class="user-mention">@CodaHale</a>)</li>
+    <li><a href="//github.com/zapodot/constretto-play">Play Constretto</a> - A <a href="http://www.playframework.org">Play! Framework 2.1</a> plugin for enabling the Constretto configuration tool to be used in conjunction with the standard Play configuration mechanism</li>
 </ul>
 
 <p>The projects above I work with on my spare time just for fun. I also do a lot of software development at my day job which is being a consultant and a partner at <a href="http://www.sonat.no">Sonat Consulting AS</a></p>
-
-        <p>
-          <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-         <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="sondre"><a class="LI-simple-link" href='https://no.linkedin.com/in/sondre?trk=profile-badge'>Sondre Eikanger Kvalø</a></div>
-        </p>
-        <p>
-        <a href="https://twitter.com/zapodot?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @zapodot</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </p>
+          <p></p>
+          <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+          <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="sondre" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://no.linkedin.com/in/sondre?trk=profile-badge">Sondre Eikanger Kvalø</a></div>
+        <div class="bluesky-badge"><a href="https://bsky.app/profile/kjempenerd.no"><img src="images/Bluesky_Logo_(with_wordmark).svg" alt="Follow @kjempenerd.no at Bluesky" class="svg-logo"/></a></div>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 <script>
