--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Zapodot's projects</h3>
         <div><a href="//github.com/zapodot" target="_blank"><img src="images/snake.svg" alt="Animation showing @zapodot commit history"/></a></div>
 
-<p>Some projects I am currently working on:</p>
+<h4>Some projects I am currently working on:</h4>
 
 <ul>
     <li><a href="https://embedded-db-junit.zapodot.org/">Embedded DB Junit rule</a> - <a href="//github.com/junit-team/junit/wiki/Rules">JUnit rule</a> for running an in-memory <a href="http://www.h2database.com">H2 database</a> in your tests</li>
